# kulms

./: .gitignore  README.md  context7.json  pyproject.toml
src/kulms/: __init__.py  client.py  direct.py  exceptions.py  session.py  timeutils.py
src/kulms/models/: __init__.py  announcement.py  assignment.py  base.py  calendar.py  course.py  resource.py  session.py  user.py
src/kulms/resources/: __init__.py  announcements.py  assignments.py  base.py  calendar.py  courses.py  resources.py  sessions.py  users.py
src/kulms_cli/: __init__.py  main.py
tests/: test_cli.py  test_direct.py  test_live.py  test_resources.py  test_session.py  test_timeutils.py
